Export rawdata stream test